Flesh out text of About; fix alignments

--- a/styles.css
+++ b/styles.css
@@ -28,13 +28,14 @@ td {
   padding-bottom: 10vh;
   padding-right: 10vh;
   padding-left: 10vh;
+  font-size: 1.5em;
 
 }
 
 #center-box {
 
   display: inline-block;
-  font-size:5em;
+  font-size:2em;
 
 }
 
@@ -46,10 +47,26 @@ td {
 
 }
 
+
+
+
+#left-box p {
+
+  text-align: left;
+
+}
+
+#lower-box p {
+
+  text-align: left;
+  
+}
+
+
 .fa {
 
   color: #42f495;
-  text-shadow: 3px 3px 3px lightGrey;
+  text-shadow: 3px 2px 2px lightGrey;
 
 }
 
